<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/updating_dialog_title"
            android:gravity="center"
            android:text="@string/mise_jour_des_informations"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:paddingBottom="15dp"
            android:paddingTop="10dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nom et Prénoms"
            android:layout_gravity="center"
            tools:ignore="HardcodedText"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTxtUpDateName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck,TextFields" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="E-mail"
            android:layout_gravity="center"
            tools:ignore="HardcodedText"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTxtUpDateEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/votre_e_mail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Numéro de téléphone"
            android:layout_gravity="center"
            tools:ignore="HardcodedText"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/editTxtUpDatePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/votre_num_ro_de_t_l_phone"
            android:inputType="phone"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnValidUpDating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/valider"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>