<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="198dp"
                android:layout_height="186dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                app:srcCompat="@mipmap/user" />

            <TextView
                android:id="@+id/userProfilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/userProfilMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/userProfilPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/userProfilPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btnModifier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modifier"
                android:layout_marginEnd="20dp"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/design_default_color_primary"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnDel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/supprimer"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/design_default_color_primary"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>